# gitnote

./: README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  release.yaml
gitnote/: main.py  utils.py
gitnote/commitgen/: generator.py  prompt.txt
gitnote/config/: settings.py
gitnote/gittools/: tools.py
tests/: test_command_diff.py
