[tool.poetry]
name = "gitnote"
version = "0.1.1"
description = "AI-based Commit Generator Tool"
authors = ["mostafa2k <m2kappswindows8.1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
keyring = "^25.5.0"
typer = "^0.14.0"
huggingface-hub = "^0.26.3"
pyyaml = "^6.0.2"
ruamel-yaml = "^0.18.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gitnote = "gitnote.main:app"
